--- a/assests/style/base.css
+++ b/assests/style/base.css
@@ -2,6 +2,7 @@
 .header{
     font-size: 12px;
     position: sticky;
+    top:0;
     box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 20.18113136291504px 0;
 }
