--- a/assests/style/main.css
+++ b/assests/style/main.css
@@ -42,9 +42,72 @@ ul{
 
     background-color:#393e46;
     color:#fff;
+    padding: 50px 0px;
 }
 .footer a{
     color: #fff;
+}
+.footer .footer-start,.footer .footer-end{
+    width:calc((100% - 60px) /2);
+}
+.footer .row{
+    gap: 60px;
+}
+
+.footer .logo {
+    display:flex;
+    flex-wrap:wrap;
+    align-items: center;
+}
+.footer .logo img{
+    width: 34px;
+    padding:4px;
+}
+.footer .footer-start{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap:30px;
+}
+.footer .footer-start p{
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 25px;
+}
+.footer .footer-start .icons{
+    display: flex;
+    gap:14px;
+    flex-wrap:wrap;
+}
+.footer .footer-start .icons img{
+    width:15px;
+    height: 15px;
+    border:1px #fff solid;
+    padding: 7px;
+    box-sizing: content-box;
+}
+.footer .footer-end .row{
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+.footer .footer-end .footer-item{
+    display: flex;
+    flex-direction: column;
+    flex-wrap:wrap;
+    gap:30px;
+}
+.footer .footer-end .footer-item ul{
+    display: flex;
+    flex-direction: column;
+    flex-wrap:wrap;
+    gap:10px;
+}
+
+.footer .footer-end .footer-item li{
+    font-size:10px;
+}
+.footer .footer-end .footer-item h2{
+    font-size:20px;
 }
 @media (max-width:990px){
 .nav{
