--- a/assests/style/base.css
+++ b/assests/style/base.css
@@ -5,6 +5,7 @@
     top:0;
     box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 20.18113136291504px 0;
+    background-color: #fff;
 }
 
 .header .logo{
