--- a/assests/style/main.css
+++ b/assests/style/main.css
@@ -3,6 +3,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Mada:wght@200..900&display=swap');
+
 *{
     padding:0;
     margin:0;
@@ -12,11 +14,15 @@
     --mainFont:"Poppins",sans-serif;
     --subFont:"Inter",sans-serif;
     --mainColor:#545BE8;
+    --testimonialFont:"Mada",sans-serif;
 }
 body{
     height: 5550px;
     font-family: var(--mainFont);
     color:var(--mainColor);
+    display: flex;
+    flex-direction: column;
+    gap:30px;
 }
 .container{
     width:calc(100% - 120px);
@@ -37,7 +43,89 @@ a{
 ul{
     list-style: none;
 }
+/*testimonial*/
+.testimonials{
+    padding-bottom: 40px;
+}
+.testimonials .row{
+   flex-wrap: wrap;
+   gap:50px;
+}
 
+.testimonials h2{
+    text-align:center;
+    color:#0D1222;
+    padding:40px;
+    font-family: var(--testimonialFont);
+}
+
+.testimonial{
+    background-color: #fff;
+    width: calc((100% - 50px) / 2);
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap:10px;
+    padding:0 20px;
+    box-shadow: 0px 8.23719596862793px 8.23719596862793px rgba(0, 0, 0, 0.216);
+    position:relative;
+}
+.testimonial::after{
+    content:"";
+    width:0px;
+    
+    border-top:30px solid #F4F4F4;
+    border-right:30px solid #F4F4F4;
+    border-left:30px solid transparent;
+    border-bottom:30px solid transparent;
+    position:absolute;
+    top:0;
+    right:0;
+}
+.testimonial .user-info img{
+    width:50px;
+    height:50px;
+    border-radius: 50%;
+}
+.testimonial .row{
+    justify-content: unset;
+    align-items: center;
+    gap:5px
+    
+}
+.testimonial .user-data{
+    padding: 20px;
+}
+.testimonial .user-data h3{
+    font-size:12px ;
+    color:#000;
+}
+.testimonial .user-data span{
+    font-size: 8px;
+    color:#969696;
+
+}
+.testimonial .user-info .user-data{
+    display:flex;
+    flex-direction:column;
+    justify-content: flex-start;
+    gap:10px;
+}
+.testimonial .rating{
+    display: flex;
+    flex-wrap: wrap;
+    gap:3px;
+}
+.testimonial .rating img{
+    width:13px;
+}
+.testimonial blockquote{
+    line-height: 20px;
+    font-size: 10px;
+    color:#646464;
+    padding-bottom:20px ;
+}
 .footer{
 
     background-color:#393e46;
