--- a/assests/style/base.css
+++ b/assests/style/base.css
@@ -6,6 +6,7 @@
     box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 20.18113136291504px 0;
     background-color: #fff;
+    z-index: 3;
 }
 
 .header .logo{
