--- a/assests/style/main.css
+++ b/assests/style/main.css
@@ -17,7 +17,7 @@
     --testimonialFont:"Mada",sans-serif;
 }
 body{
-    height: 5550px;
+    /* height: 5550px; */
     font-family: var(--mainFont);
     color:var(--mainColor);
     display: flex;
@@ -43,13 +43,213 @@ a{
 ul{
     list-style: none;
 }
+/* selected-courses */
+
+.selected-courses{ 
+    background:  linear-gradient(180deg, #545be8 0%, #272db0 100%);
+    color:#fff;
+}
+
+.selected-courses .row{
+    justify-content: stretch;
+    gap:120px;
+}
+
+.selected-courses-start,.selected-courses-end{
+    width:calc((100% - 120px) / 2 );
+}
+
+.selected-courses-start img {
+    width:100%;
+}
+
+.selected-courses-end{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap:20px;
+}
+
+.selected-courses-end span{
+    color:#F0C932;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 12px;
+    font-family:var(--subFont);
+}
+
+.selected-courses-end h2{
+    font-size:35px;
+    line-height: 60px;
+    text-transform: capitalize;
+}
+
+.selected-courses-end p {
+    font-weight: 200;
+    color:#ddd;
+    font-size: 13px;
+}
+
+.selected-courses-end .figures{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    flex-wrap: wrap;
+}
+
+.selected-courses-end .figure{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap:10px;
+}
+
+.selected-courses-end .figure :first-of-type{
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.selected-courses-end .figure :last-of-type{
+    color: #ddd;
+    font-size: 11px;
+}
+/* Available Courses */
+.available-courses{
+    padding : 40px 0;
+    background-color:#fff; 
+}
+.available-courses .available-courses-start .courses .course-img{
+    position: relative;
+    
+    
+}
+
+.available-courses .available-courses-start .img-info{
+    position: absolute;
+    top:0;
+    bottom: 0;
+    right: 0;
+    left:0;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    
+}
+
+
+.available-courses .available-courses-start .img-info :first-of-type {
+    color:#fff;
+    font-weight: 500;
+    font-size: 12px;
+    border: var(--mainColor) solid;
+    padding:10px 10px;
+    background-color:var(--mainColor);
+    margin:40px 0px;
+}
+
+.available-courses .available-courses-start .img-info :last-of-type{
+    color:#fff;
+    font-weight: 700;
+    font-size: 13px;
+    align-self: flex-end;
+    padding:10px;
+} 
+
+
+
+.available-courses .row{
+    /* flex-wrap:nowrap; */
+    justify-content: stretch;
+    gap:60px;
+    align-items:flex-start ;
+}
+.available-courses .available-courses-start{
+    width: 70%;
+}
+
+.available-courses .available-courses-end {
+    width:25%;
+}
+
+.available-courses .courses{
+    margin:20px 0px;
+    
+    width: calc(( 100% - 60px ) / 2);
+    box-shadow: 0px 7.437575340270996px 7.437575340270996px rgba(0, 0, 0, 0.05);
+}
+ 
+.available-courses .courses a img{
+    width:100%;
+    filter:brightness(65%);
+}
+
+.available-courses-start .courses .row{
+    justify-content: space-between;
+}
+.available-courses-start .courses .row span{
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 8px;
+    text-align: left;
+    color: #545be8;
+    padding:5px;
+}
+
+.available-courses-start .courses .row a{
+    font-weight: 700;
+    font-size:18px;
+    color:#141E32;
+    padding:5px;
+}
+
+.available-courses-start .course-info{
+    display: flex;
+    line-height: 32px;
+    gap:20px;
+    
+}
+.available-courses-start .course-info h4{
+    color:#969696;
+    font-weight: 400;
+    font-size: 15px;
+    padding:5px;
+}
+
+.available-courses-end .row{
+    flex-direction: column;
+    align-items: flex-start ;
+    gap: 10px;
+}
+.available-courses-end .row span{
+    margin-top:20px;
+    text-transform:uppercase;
+    font-family: var(--subFont);
+}
+.available-courses-end .row h2{
+    color:#141E32;
+    margin-top: 0px;
+    font-size: 34px;
+}
+.available-courses-end .row p{
+    color:#969696;
+}
+
+.available-courses-end .row a{
+    border: var(--mainColor) solid ;
+    padding: 5px 40px;
+    border-radius: 8px;
+    background-color: var(--mainColor);
+    color: #fff;
+    margin-top: 20px;
+}
+
 /*testimonial*/
 .testimonials{
     padding-bottom: 40px;
 }
 .testimonials .row{
-   flex-wrap: wrap;
-   gap:50px;
+    flex-wrap: wrap;
+    gap:50px;
 }
 
 .testimonials h2{
