--- a/assests/style/main.css
+++ b/assests/style/main.css
@@ -43,6 +43,79 @@ a{
 ul{
     list-style: none;
 }
+/*services*/
+
+.services{
+    background-color: #F5F5F5;
+    padding:40px 0px;
+}
+
+.services .row{
+    gap:20px;
+}
+
+.services .services-start{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap:20px;
+    width:30%;
+}
+
+.services .services-end {
+    display: flex;
+    flex-wrap:wrap;
+    gap:30px;
+    width:65%;
+    padding:40px;
+
+}
+
+.services .services-start span{
+    text-transform: uppercase;
+    font-family: var(--subFont);
+}
+
+.services .services-start h2{
+    color:#141E32;
+    font-weight: 800;
+    word-spacing: 5px;
+    font-size: 40px;
+}
+
+.services .services-start p{
+    color:#969696;
+}
+.service{
+    display: flex;
+    flex-direction:column;
+    flex-wrap: wrap;
+    gap: 20px;;
+    width:calc((100% - 60px) / 3);
+    justify-content: flex-start;
+    border:var(--mainColor);
+    padding:20px;
+    padding-top:40px;
+    background: var(--mainColor);
+    border-radius:5px ;
+    color: #fff;
+    font-family: var(--subFont);
+}
+
+.service img{
+    width:20px;
+    border-radius: 50%;
+    padding:5px;
+    box-sizing: content-box;
+    background-color: #fff;
+}
+
+.service p{
+    font-size: 12px;
+    color:#ddd;
+    font-family: var(--mainFont);
+}
 /* selected-courses */
 
 .selected-courses{ 
@@ -56,7 +129,7 @@ ul{
 }
 
 .selected-courses-start,.selected-courses-end{
-    width:calc((100% - 120px) / 2 );
+    width:calc(( 100% - 120px ) / 2 );
 }
 
 .selected-courses-start img {
