--- a/assests/style/main.css
+++ b/assests/style/main.css
@@ -69,6 +69,7 @@ ul{
     gap:30px;
     width:65%;
     padding:40px;
+    padding-bottom: 10px;
 
 }
 
@@ -116,6 +117,29 @@ ul{
     color:#ddd;
     font-family: var(--mainFont);
 }
+
+.services .buttons{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: end;
+    gap:20px;
+    padding:0px 80px;
+}
+
+.services .buttons .button{
+    color:#fff;
+    width:40px;
+    height: 40px;
+    font-size: 30px;
+    padding-top:0px;
+    border:#F0C932 solid;
+    border-radius: 50%;
+    padding:0 10px;
+    background: #F0C932;
+    font-weight: 300;
+    box-sizing: border-box;
+}
+
 /* selected-courses */
 
 .selected-courses{ 
